# Batch-Prediction-Vertex-AI

./: Makefile  README.md  backend.tf  prediction.json  provider.tf  pyproject.toml  terraform.tfplan  training.json  variables.tf
.terraform/modules/: modules.json
containers/: Dockerfile
modules/pubsub_cloud_function/: main.tf  outputs.tf  storage.tf  variables.tf
project_configuration/: variables.tfvars.json
src/: main.py
src/base/: utilities.py
src/components/: dependencies.py
src/components/bigquery/: __init__.py  dataset_to_table.py  query_to_table.py  table_to_dataset.py
src/components/data/: __init__.py  train_test_split.py
src/components/helpers/: __init__.py  copy_artifact.py  get_current_time.py  quote_csv_header.py
src/components/model/: __init__.py  save_txt.py  train.py  train.yaml
src/pipelines/: __init__.py
src/pipelines/predictions/: pipeline.py
src/pipelines/training/: pipeline.py
src/pipelines/training/payloads/: training.json
src/serving_api/: models.py
src/trigger/: app.py  basic_trigger.py  config.py  main.py  models.py  utils.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  terraform.tfplan  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/.terraform/modules/: modules.json
terraform/modules/pubsub_cloud_function/: main.tf  outputs.tf  storage.tf  variables.tf
terraform/modules/pubsub_scheduler/: scheduler.tf  variables.tf
terraform/modules/pubsub_trigger/: outputs.tf  trigger.tf  variables.tf
terraform/project_configuration/: variables.auto.tfvars  variables.tfvars.json
(+2 files in other folders)
