[tool.poetry]
name = "batch-pred"
version = "0.1.0"
description = "A batch prediction system using GCP"
authors = ["Moustafa <mosafehashf@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
google-cloud-pipeline-components = "^1.0.41"
google-cloud-aiplatform = "^1.23.0"
google-cloud-storage = "^2.7.0"
python = "^3.10"
loguru = "^0.6.0"
fastapi = "^0.95.0"
requests = "^2.28.2"
google-auth = "^2.17.0"
kfp = "^1.8.19"
pandas = "^1.5.3"
numpy = "^1.24.2"
gunicorn = "^20.1.0"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
commitizen = "^2.42.1"
black = ">=20.0.0,<=23.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
